--- a/index.html
+++ b/index.html
@@ -2,11 +2,99 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
+    <title>Нёрдс</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+    <header class="main-header">
+      <h1 class="hidden">Студия Нердс</h1>
+      <nav class="main-navigation">
+        <a class="nerds-logo"href=""><img src="nerdsLogo.svg" alt="Наш логотип"></a>
+      <ul class="site-navigation">
+        <li><a href="">Студия</a></li>
+        <li><a href="">Клиенты</a></li>
+        <li><a href="catalog.html">Магазин</a></li>
+        <li><a href="">Контакты</a></li>
+      </ul>
+      <ul class="user-navigation">
+        <li><a href="">Корзина</a></li>
+      </ul>
+      </nav>
+      <b>Долго,дорого,скрупулезно.</b>
+        <p>математически выверенный дизайн
+           для вашего сайта или приложения</p>
+    </header>
+    <main class="container">
+      <h2 class="hidden">Услуги</h2>
+      <section class="products">
+        <ul class="products-list">
+          <li class="web-sites">
+            <img src="img/sites.png" alt="Веб-сайты">
+            <h3>ВЕБ-САЙТЫ</h3>
+            <p>Мир никогда не будет прежним
+               после того как увидит ваш сайт</p>
+               <a href="catalog.html">Заказать</a>
+          </li>
+          <li class="apps">
+            <img src="img/apps.png" alt="Приложения">
+            <h3>ПРИЛОЖЕНИЯ</h3>
+            <a href="catalog.html">Заказать</a>
+          </li>
+          <li class="presentations">
+            <img src="img/presentations.png" alt="Презентации">
+            <h3>Презентации</h3>
+            <a href="catalog.html">Заказать</a>
+          </li>
+        </ul>
+      </section>
+      <section class="about-us">
+        <b class="about-us-studio">Мы-маленькая,но гордая
+          дизайн-студия из Краснодара</b>
+          <p>Исповедуем принципы минимализма и чистоты.
+          Ставим математический расчет превыше креатива.
+        Работаем не покладая рук как роботы.</p>
+          <p><span class="orders">Выполняем
+            заказы на разработку:</span></p>
+          <ul class="about-us-orders">
+            <li>Веб-сайтов любой сложности</li>
+            <li>Мобильные приложения для IOS и Android</li>
+            <li>Слайдшоу и видео для корпоративных презентаций</li>
+          </ul>
+      </section>
+      <section class="statistics">
+        <img src="img/nerds.png" alt="Логотип">
+        <p>С 2004 года любим точность во всем:</p>
+        <table>
+          <tr class="statistics-percents">
+            <th>146%</th>
+            <th>100%</th>
+            <th>50%</th>
+          </tr>
+          <tr class="statistics-advantages">
+            <td>Уровень самоотдачи</td>
+            <td>Соблюдение сроков</td>
+            <td>Минимальная предоплата</td>
+          </tr>
+        </table>
+      </section>
+      <section class="projects">
+        <ul class="projects-list">
+           <li><a href=""><img src="img/htmlacademy.svg" alt="HTML Academy"></a></li>
+           <li><a href=""><img src="img/borodinsky.svg" alt="Barbershop Borodinsky"></a></li>
+           <li><a href=""><img src="img/pink.svg" alt="Pink"></a></li>
+           <li><a href=""><img src="img/mishka.svg" alt="Mishka"></a></li>
+        </ul>
+      </section>
+      <footer class="main-footer">
+        <div class="footer-social">
+          <ul>
+          <li><a href="" class="social-button">Вконтакте</a></li>
+          <li><a href="" class="social-button">Фейсбук</a></li>
+          <li><a href="" class="social-button">Инстаграм</a></li>
+          </ul>
+        </div>
+        <b>Давайте дружить, это выгодно!</b>
+        <p>Скидка 10% для друзей из социальных сетей</p>
+      </footer>
+    </main>
   </body>
 </html>
