--- a/catalog.html
+++ b/catalog.html
@@ -1,47 +1,44 @@
 <!DOCTYPE html>
 <html lang="ru" >
-  <head>
-    <meta charset="utf-8">
-    <title>Каталог услуг студии Нердс</title>
-  </head>
-  <body>
-    <header class="main-header">
-      <h1 class="hidden">Студия Нердс</h1>
-      <nav class="main-navigation">
-        <a class="nerds-logo"href="index.html"><img src="nerdsLogo.svg" alt="Наш логотип"></a>
-      <ul class="site-navigation">
-        <li><a href="">Студия</a></li>
-        <li><a href="">Клиенты</a></li>
-        <li><a href="catalog.html">Магазин</a></li>
-        <li><a href="">Контакты</a></li>
-      </ul>
-      <ul class="user-navigation">
-        <li><a href="">Корзина</a></li>
-      </ul>
-      </nav>
-      <h1>Магазин готовых шаблонов</h1>
-    </header>
-    <!-- Здесь будет форма-->
-      <section class="catalog">
-        <ul class="catalog-list">
-          <li><img src="" alt=""></li>
-          <li><img src="" alt=""></li>
-          <li><img src="" alt=""></li>
-          <li><img src="" alt=""></li>
-          <li><img src="" alt=""></li>
-          <li><img src="" alt=""></li>
-        </ul>
+    <head>
+        <meta charset="utf-8">
+        <title>Каталог услуг студии Нердс</title>
+    </head>
+    <body>
+        <header class="main-header">
+            <a class="nerds-logo"href="index.html"><img src="nerdsLogo.svg" alt="Наш логотип"></a>
+            <nav class="main-navigation">
+                <ul class="site-navigation">
+                    <li><a href="">Студия</a></li>
+                    <li><a href="">Клиенты</a></li>
+                    <li><a href="catalog.html">Магазин</a></li>
+                    <li><a href="">Контакты</a></li>
+                </ul>
+                <ul class="user-navigation">
+                    <li><a href="">Корзина</a></li>
+                </ul>
+            </nav>
+            <h1>Магазин готовых шаблонов</h1>
+        </header>
+        <!-- Здесь будет форма-->
+        <section class="catalog">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
       </section>
       <footer class="main-footer">
-        <div class="footer-social">
-          <ul>
-          <li><a href="" class="social-button">Вконтакте</a></li>
-          <li><a href="" class="social-button">Фейсбук</a></li>
-          <li><a href="" class="social-button">Инстаграм</a></li>
-          </ul>
-        </div>
-        <b>Давайте дружить, это выгодно!</b>
-        <p>Скидка 10% для друзей из социальных сетей</p>
+          <div class="footer-social">
+              <ul>
+                  <li><a href="" class="social-button">Вконтакте</a></li>
+                  <li><a href="" class="social-button">Фейсбук</a></li>
+                  <li><a href="" class="social-button">Инстаграм</a></li>
+              </ul>
+          </div>
+          <b>Давайте дружить, это выгодно!</b>
+          <p>Скидка 10% для друзей из социальных сетей</p>
       </footer>
   </body>
 </html>
