--- a/catalog.html
+++ b/catalog.html
@@ -6,12 +6,12 @@
     </head>
     <body>
         <header class="main-header">
-            <a class="nerds-logo"href="index.html"><img src="nerdsLogo.svg" alt="Наш логотип"></a>
+            <a class="nerds-logo"href="index.html"><img src="img/nerds-logo.png" alt="Наш логотип"></a>
             <nav class="main-navigation">
                 <ul class="site-navigation">
                     <li><a href="">Студия</a></li>
                     <li><a href="">Клиенты</a></li>
-                    <li><a href="catalog.html">Магазин</a></li>
+                    <li><a href="">Магазин</a></li>
                     <li><a href="">Контакты</a></li>
                 </ul>
                 <ul class="user-navigation">
@@ -20,21 +20,99 @@
             </nav>
             <h1>Магазин готовых шаблонов</h1>
         </header>
-        <!-- Здесь будет форма-->
+        <form class="" action="" method="post">
+            <fieldset>
+                <legend>Стоимость</legend>
+                <!-- Здесь будет фильтр стоимости -->
+            </fieldset>
+            <fieldset>
+                <legend>Сетка:</legend>
+                <ul>
+                    <li class="greed-option">
+                        <input class="visually-hidden" type="radio"
+                        name="greed-group" id="adaptive-greed" value="adaptive" checked>
+                        <label for="adaptive-greed">Адаптивная</label>
+                    </li>
+                    <li class="greed-option">
+                        <input class="visually-hidden"type="radio"
+                        name="greed-group" id="fixed-greed" value="fixed">
+                        <label for="fixed-greed">Фиксированная</label>
+                    </li>
+                    <li class="greed-option">
+                        <input class="visually-hidden" type="radio"
+                        name="greed-group" id="resin-greed" value="resin">
+                        <label for="resin-greed">Фиксированная</label>
+                    </li>
+                </ul>
+            </fieldset>
+            <fieldset>
+                <legend>Особенности:</legend>
+                    <ul>
+                      <li class="features-item">
+                        <input class="visually-hidden" type="checkbox"
+                        name="slider-feature" value="slider-item" id="slider" checked>
+                        <label for="slider">Слайдер</label>
+                      </li>
+                      <li class="features-item">
+                        <input class="visually-hidden"type="checkbox"
+                         name="advantage-block-feature" id="advantage-block" value="advantage-block-item">
+                         <label for="advantage-block">Блок преимуществ</label>
+                      </li>
+                      <li class="features-item">
+                        <input class="visually-hidden" type="checkbox"
+                         name="news-feature" value="news-item" id="news" checked>
+                         <label for="news">Новости</label>
+                      </li>
+                      <li class="features-item">
+                        <input class="visually-hidden" type="checkbox"
+                         name="galery-feature" value="galery-item" id="galery">
+                         <label for="galery">Галерея</label>
+                      </li>
+                      <li class="features-item">
+                        <input class="visually-hidden" type="checkbox"
+                         name="box-feature" value="box-item" id="box">
+                         <label for="box">Корзина</label>
+                      </li>
+                    </ul>
+            </fieldset>
+            <button type="button" name="showbutton">Показать</button>
+        </form>
         <section class="catalog">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+            <img src="img/img-sedona.jpg" alt="Седона">
+            <img src="img/img-pink.jpg" alt="Пинк">
+            <img src="img/img-barbershop.jpg" alt="Барбершоп">
+            <img src="img/img-mishka.jpg" alt="Мишка">
+            <img src="img/img-aplus.jpg" alt="Аплюс">
+            <img src="img/img-kvast.jpg" alt="Кваст">
       </section>
+      <form class="feedback" action="" method="post">
+          <h2>Напишите нам</h2>
+          <label for="username">Ваше имя:</label>
+          <input type="text" name="username" id="username" placeholder="Имя Фамилия">
+          <label for="useremail">Ваш e-mail:</label>
+          <input type="email" name="email" id="useremail" placeholder="email@example.com">
+          <br>
+          <label for="comment">Текст письма:</label>
+          <br>
+          <textarea name="comment" rows="5" cols="40"></textarea>
+          <br>
+          <button type="submit" name="sendbutton">Отправить</button>
+          <button type="button" name="closebutton">Закрыть</button>
+       </form>
+          <section class="map">
+              <div class="feedback-write-us">
+                <h3>NЁRDS DESIGN STUDIO</h3>
+                <span class="feedback-address">191186, Санкт-Петербург, ул. Б.Конюшенная, д.19/8</span>
+                <span class="feedback-telephone">тел. +7(812)275-75-75</span>
+                <button type="button" name="write-us-button">Напишите нам</button>
+              </div>
+          </section>
       <footer class="main-footer">
           <div class="footer-social">
               <ul>
-                  <li><a href="" class="social-button">Вконтакте</a></li>
-                  <li><a href="" class="social-button">Фейсбук</a></li>
-                  <li><a href="" class="social-button">Инстаграм</a></li>
+                  <li><a href="" class="social-button"><span class="visually-hidden">Вконтакте</span></a></li>
+                  <li><a href="" class="social-button"><span class="visually-hidden">Фейсбук</span></a></li>
+                  <li><a href="" class="social-button"><span class="visually-hidden">Инстаграм</span></a></li>
               </ul>
           </div>
           <b>Давайте дружить, это выгодно!</b>
