--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Каталог услуг студии Нердс</title>
+        <link rel="stylesheet" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
     </head>
     <body>
         <header class="main-header">
@@ -11,14 +13,14 @@
                 <ul class="site-navigation">
                     <li><a href="">Студия</a></li>
                     <li><a href="">Клиенты</a></li>
-                    <li><a href="">Магазин</a></li>
+                    <li class="selection-item"><a href="">Магазин</a></li>
                     <li><a href="">Контакты</a></li>
                 </ul>
                 <ul class="user-navigation">
                     <li><a href="">Корзина</a></li>
                 </ul>
             </nav>
-            <h1>Магазин готовых шаблонов</h1>
+            <h1 class="shop-template" >Магазин готовых шаблонов</h1>
         </header>
         <form class="" action="" method="post">
             <fieldset>
