--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
       <meta charset="utf-8">
       <title>Нёрдс</title>
+      <link rel="stylesheet" href="css/style.css">
+      <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
   </head>
   <body>
       <header class="main-header">
           <h1 class="visually-hidden">Студия Нердс</h1>
-          <a class="nerds-logo"href=""><img src="img/nerds-logo.png" alt="Наш логотип"></a>
+          <a class="nerds-logo" href=""><img src="img/nerds-logo.png" alt="Наш логотип"></a>
           <nav class="main-navigation">
               <ul class="site-navigation">
                   <li><a href="">Студия</a></li>
@@ -19,7 +21,7 @@
                   <li><a href="">Корзина</a></li>
               </ul>
           </nav>
-          <b>Долго,дорого,скрупулезно.</b>
+          <b class="tagline">Долго,дорого,скрупулезно.</b>
           <p>математически выверенный дизайн  для вашего сайта или приложения</p>
       </header>
       <main class="container">
@@ -30,17 +32,17 @@
                       <img src="img/illustration-1.png" alt="Веб-сайты">
                       <h3>ВЕБ-САЙТЫ</h3>
                       <p>Мир никогда не будет прежним после того как увидит ваш сайт</p>
-                      <a href="catalog.html">Заказать</a>
+                      <a class="product-order red-link" href="catalog.html">Заказать</a>
                   </li>
                   <li class="apps">
                       <img src="img/illustration-2.png" alt="Приложения">
                       <h3>ПРИЛОЖЕНИЯ</h3>
-                      <a href="catalog.html">Заказать</a>
+                      <a class="product-order green-link" href="catalog.html">Заказать</a>
                   </li>
                   <li class="presentations">
                       <img src="img/illustration-3.png" alt="Презентации">
-                      <h3>Презентации</h3>
-                      <a href="catalog.html">Заказать</a>
+                      <h3>ПРЕЗЕНТАЦИИ</h3>
+                      <a class="product-order yellow-link" href="catalog.html">Заказать</a>
                   </li>
                 </ul>
            </section>
@@ -51,7 +53,7 @@
                   Ставим математический расчет превыше креатива.
                   Работаем не покладая рук как роботы.
                </p>
-               <p><span class="orders">Выполняем заказы на разработку:</span></p>
+               <p class="orders">Выполняем заказы на разработку:</p>
                <ul class="about-us-orders">
                    <li>Веб-сайтов любой сложности</li>
                    <li>Мобильные приложения для IOS и Android</li>
@@ -63,9 +65,9 @@
                <p>С 2004 года любим точность во всем:</p>
                <table>
                    <tr class="statistics-percents">
-                       <th>146%</th>
-                       <th>100%</th>
-                       <th>50%</th>
+                       <td>146%</td>
+                       <td>100%</td>
+                       <td>50%</td>
                    </tr>
                    <tr class="statistics-advantages">
                        <td>Уровень самоотдачи</td>
@@ -94,8 +96,8 @@
           <br>
           <textarea name="comment" rows="5" cols="40"></textarea>
           <br>
-          <button type="submit" name="sendbutton">Отправить</button>
-          <button type="button" name="closebutton">Закрыть</button>
+          <button class="" type="submit" name="sendbutton">Отправить</button>
+          <button class="" type="button" name="closebutton">Закрыть</button>
        </form>
           <section class="map">
               <div class="feedback-write-us">
@@ -108,13 +110,13 @@
       <footer class="main-footer">
           <div class="footer-social">
               <ul>
-                  <li><a href="" class="social-button">Вконтакте</a></li>
-                  <li><a href="" class="social-button">Фейсбук</a></li>
-                  <li><a href="" class="social-button">Инстаграм</a></li>
-              </ul>
+                  <li><a href="" class="social-button"><span class="visually-hidden">Вконтакте</span></a></li>
+                  <li><a href="" class="social-button"><span class="visually-hidden">Фейсбук</span></a></li>
+                  <li><a href="" class="social-button"><span class="visually-hidden">Инстаграм</span></a></li>
+                </ul>
           </div>
-          <b>Давайте дружить, это выгодно!</b>
-          <p>Скидка 10% для друзей из социальных сетей</p>
+          <b class="footer-tagline">Давайте дружить, это выгодно!</b>
+          <p class="footer-paragraph">Скидка 10% для друзей из социальных сетей</p>
       </footer>
   </body>
 </html>
