Added first greed
Greed

--- a/catalog.html
+++ b/catalog.html
@@ -8,8 +8,9 @@
     </head>
     <body>
         <header class="main-header">
-            <a class="nerds-logo"href="index.html"><img src="img/nerds-logo.png" alt="Наш логотип"></a>
+          <div class="container">
             <nav class="main-navigation">
+                <a class="nerds-logo"href="index.html"><img src="img/nerds-logo.png" alt="Наш логотип"></a>
                 <ul class="site-navigation">
                     <li><a href="">Студия</a></li>
                     <li><a href="">Клиенты</a></li>
@@ -21,6 +22,7 @@
                 </ul>
             </nav>
             <h1 class="shop-template" >Магазин готовых шаблонов</h1>
+          </div>
         </header>
         <form class="" action="" method="post">
             <fieldset>
