--- a/index.html
+++ b/index.html
@@ -8,40 +8,44 @@
   </head>
   <body>
       <header class="main-header">
-          <h1 class="visually-hidden">Студия Нердс</h1>
-          <a class="nerds-logo" href=""><img src="img/nerds-logo.png" alt="Наш логотип"></a>
-          <nav class="main-navigation">
-              <ul class="site-navigation">
-                  <li><a href="">Студия</a></li>
-                  <li><a href="">Клиенты</a></li>
-                  <li><a href="catalog.html">Магазин</a></li>
-                  <li><a href="">Контакты</a></li>
-              </ul>
-              <ul class="user-navigation">
+        <div class="container">
+            <h1 class="visually-hidden">Студия Нердс</h1>
+            <nav class="main-navigation">
+                <a class="nerds-logo" href=""><img src="img/nerds-logo.png" alt="Наш логотип"></a>
+                <ul class="site-navigation">
+                    <li><a href="">Студия</a></li>
+                    <li><a href="">Клиенты</a></li>
+                    <li><a href="catalog.html">Магазин</a></li>
+                    <li><a href="">Контакты</a></li>
+                  </ul>
+                  <ul class="user-navigation">
                   <li><a href="">Корзина</a></li>
-              </ul>
-          </nav>
+                  </ul>
+          </div>
           <b class="tagline">Долго,дорого,скрупулезно.</b>
           <p>математически выверенный дизайн  для вашего сайта или приложения</p>
+        </div>
       </header>
-      <main class="container">
+      <main class="main-container">
           <h2 class="visually-hidden">Услуги</h2>
-          <section class="products">
+          <section class="products container">
               <ul class="products-list">
                   <li class="web-sites">
                       <img src="img/illustration-1.png" alt="Веб-сайты">
                       <h3>ВЕБ-САЙТЫ</h3>
-                      <p>Мир никогда не будет прежним после того как увидит ваш сайт</p>
+                      <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
                       <a class="product-order red-link" href="catalog.html">Заказать</a>
                   </li>
                   <li class="apps">
                       <img src="img/illustration-2.png" alt="Приложения">
                       <h3>ПРИЛОЖЕНИЯ</h3>
+                      <p>Покорите топ-10 приложений в App Store и Google play</p>
                       <a class="product-order green-link" href="catalog.html">Заказать</a>
                   </li>
                   <li class="presentations">
                       <img src="img/illustration-3.png" alt="Презентации">
                       <h3>ПРЕЗЕНТАЦИИ</h3>
+                      <p>Вы даже не подозреваете насколько вы изумительны!</p>
                       <a class="product-order yellow-link" href="catalog.html">Заказать</a>
                   </li>
                 </ul>
