--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru">
-<!-- Добавлена сетка -->
   <head>
       <meta charset="utf-8">
       <title>Нёрдс</title>
@@ -20,16 +19,48 @@
                     <li><a href="">Контакты</a></li>
                   </ul>
                   <ul class="user-navigation">
-                  <li><a href="">Корзина</a></li>
+                  <li class="cart" ><a href="">Корзина</a></li>
                   </ul>
+             </nav>
           </div>
-          <b class="tagline">Долго,дорого,скрупулезно.</b>
-          <p>математически выверенный дизайн  для вашего сайта или приложения</p>
-        </div>
+          <!-- <b class="tagline">Долго,дорого,скрупулезно.</b>
+          <p>математически выверенный дизайн  для вашего сайта или приложения</p> -->
       </header>
       <main class="main-container">
+        <div class="main-slider">
+            <div class="container">
+              <div class="main-slider-item main-slider-item-slide-1 active">
+                  <div class="main-slider-content">
+                    <b class="main-slider-title">Долго,дорого,<br>скрупулезно.</b>
+                    <p class="main-slider-description">Математически выверенный дизайн
+                        для вашего сайта или мобильного приложения.</p>
+                    <a href="" class="main-slider-button">Узнать больше</a>
+                  </div>
+              </div>
+              <div class="main-slider-item main-slider-item-slide-2">
+                  <div class="main-slider-content">
+                    <h3 class="main-slider-title">Бла бла</h3>
+                    <p class="main-slider-description">Bla bla bla</p>
+                    <a href="" class="main-slider-button">Узнать больше</a>
+                  </div>
+              </div>
+              <div class="main-slider-item main-slider-item-slide-3">
+                  <div class="main-slider-content">
+                    <h3 class="main-slider-title">Бла бла</h3>
+                    <p class="main-slider-description">Bla bla bla</p>
+                    <a href="" class="main-slider-button">Узнать больше</a>
+                  </div>
+              </div>
+            </div>
+            <div class="main-slider-dots">
+              <button class="main-slider-dot" id="slider-1"></button>
+              <button class="main-slider-dot" id="slider-2"></button>
+              <button class="main-slider-dot" id="slider-3"></button>
+            </div>
+          </div>
           <h2 class="visually-hidden">Услуги</h2>
-          <section class="products container">
+          <section class="products">
+            <div class="products-container">
               <ul class="products-list">
                   <li class="web-sites">
                       <img src="img/illustration-1.png" alt="Веб-сайты">
@@ -50,37 +81,43 @@
                       <a class="product-order yellow-link" href="catalog.html">Заказать</a>
                   </li>
                 </ul>
+              </div>
            </section>
-           <section class="about-us">
-               <b class="about-us-studio">Мы-маленькая,но гордая дизайн-студия из Краснодара</b>
-               <p>
-                  Исповедуем принципы минимализма и чистоты.
-                  Ставим математический расчет превыше креатива.
-                  Работаем не покладая рук как роботы.
-               </p>
-               <p class="orders">Выполняем заказы на разработку:</p>
-               <ul class="about-us-orders">
-                   <li>Веб-сайтов любой сложности</li>
-                   <li>Мобильные приложения для IOS и Android</li>
-                   <li>Слайдшоу и видео для корпоративных презентаций</li>
-               </ul>
-           </section>
-           <section class="statistics">
-               <img src="img/nerds-illustration.png" alt="Логотип">
-               <p>С 2004 года любим точность во всем:</p>
-               <table>
-                   <tr class="statistics-percents">
-                       <td>146%</td>
-                       <td>100%</td>
+           <div class="container">
+             <div class="row">
+               <section class="about-us">
+                 <b class="about-us-studio">Мы-маленькая,но гордая дизайн-студия из Краснодара</b>
+                 <p>
+                   Исповедуем принципы минимализма и чистоты.
+                   Ставим математический расчет превыше креатива.
+                   Работаем не покладая рук как роботы.
+                 </p>
+                 <p class="orders">Выполняем заказы на разработку:</p>
+                 <ul class="about-us-orders">
+                    <li>Веб-сайтов любой сложности</li>
+                    <li>Мобильные приложения для IOS и Android</li>
+                    <li>Слайдшоу и видео для корпоративных презентаций</li>
+                  </ul>
+               </section>
+               <section class="statistics">
+                 <img src="img/nerds-illustration.png" alt="Логотип">
+                 <p>С 2004 года любим точность во всем:</p>
+                 <table>
+                    <tr class="statistics-percents">
+                        <td>146%</td>
+                        <td>100%</td>
                        <td>50%</td>
-                   </tr>
-                   <tr class="statistics-advantages">
+                     </tr>
+                     <tr class="statistics-advantages">
                        <td>Уровень самоотдачи</td>
                        <td>Соблюдение сроков</td>
                        <td>Минимальная предоплата</td>
-                   </tr>
-               </table>
-            </section>
+                     </tr>
+                   </table>
+                 </section>
+             </div>
+          </div>
+          <div class=container>
             <section class="projects">
                 <ul class="projects-list">
                     <li><a href=""><img src="img/logo-1.png" alt="HTML Академия"></a></li>
@@ -89,6 +126,7 @@
                     <li><a href=""><img src="img/logo-4.png" alt="Мишка"></a></li>
                 </ul>
             </section>
+          </div>
       </main>
       <form class="feedback" action="" method="post">
           <h2>Напишите нам</h2>
@@ -113,15 +151,36 @@
               </div>
           </section>
       <footer class="main-footer">
+        <div class="container">
           <div class="footer-social">
-              <ul>
-                  <li><a href="" class="social-button"><span class="visually-hidden">Вконтакте</span></a></li>
-                  <li><a href="" class="social-button"><span class="visually-hidden">Фейсбук</span></a></li>
-                  <li><a href="" class="social-button"><span class="visually-hidden">Инстаграм</span></a></li>
+              <ul class="social-list">
+                  <li><a href="" class="social-button"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                  	 width="26px" height="15px" viewBox="0 0 26 15" enable-background="new 0 0 26 15" xml:space="preserve">
+                  <path fill="#FFFFFF" d="M16.138,11.51c0.956-0.309,2.18,2.04,3.483,2.939c0.978,0.681,1.727,0.534,1.727,0.534l3.473-0.05
+                  	c0,0,1.815-0.112,0.957-1.554c-0.071-0.12-0.503-1.069-2.585-3.022c-2.177-2.043-1.882-1.712,0.739-5.244
+                  	c1.597-2.153,2.236-3.468,2.036-4.028c-0.192-0.539-1.365-0.399-1.365-0.399L20.69,0.713c-0.381,0.001-0.704,0.119-0.851,0.515
+                  	c-0.003,0.004-0.621,1.666-1.445,3.079c-1.741,2.989-2.436,3.148-2.724,2.961c-0.661-0.433-0.494-1.737-0.494-2.664
+                  	c0-2.897,0.432-4.105-0.846-4.417c-0.427-0.104-0.739-0.172-1.828-0.182c-1.392-0.021-2.574,0-3.244,0.329
+                  	c-0.445,0.223-0.786,0.712-0.579,0.74c0.26,0.035,0.843,0.16,1.155,0.586c0.401,0.552,0.389,1.789,0.389,1.789
+                  	s0.229,3.411-0.54,3.834c-0.528,0.29-1.25-0.302-2.803-3.016C6.087,2.879,5.488,1.345,5.488,1.345S5.372,1.06,5.162,0.904
+                  	C4.912,0.719,4.562,0.66,4.562,0.66L0.848,0.684c0,0-0.558,0.016-0.763,0.262C-0.097,1.164,0.07,1.614,0.07,1.614
+                  	s2.909,6.881,6.203,10.347c3.02,3.182,6.452,2.971,6.452,2.971h1.555c0,0,0.469-0.054,0.709-0.312
+                  	c0.224-0.24,0.214-0.691,0.214-0.691S15.172,11.82,16.138,11.51z"/>
+                  </svg><span class="visually-hidden">Вконтакте</span></a></li>
+                  <li><a href="" class="social-button"><svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                  	 width="12px" height="22px" viewBox="0 0 12 22" enable-background="new 0 0 12 22" xml:space="preserve">
+                  <path fill="#FFFFFF" d="M12,4V0H8C5.791,0,4,1.791,4,4v4H0v4h4v10h4V12h4V8H8V4H12z"/>
+                  </svg><span class="visually-hidden">Фейсбук</span></a></li>
+                  <li><a href="" class="social-button">
+                    <svg enable-background="new 0 0 21 21" height="21" viewBox="0 0 21 21" width="21" xmlns="http://www.w3.org/2000/svg"><path d="m18 0h-15c-1.65 0-3 1.35-3 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3v-15c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5s-1.57 3.5-3.5 3.5-3.5-1.57-3.5-3.5 1.57-3.5 3.5-3.5zm7.5 11h-15v-9h1.181c-.114.482-.181.983-.181 1.5 0 3.59 2.91 6.5 6.5 6.5s6.5-2.91 6.5-6.5c0-.517-.066-1.018-.181-1.5h1.181zm0-11h-4v-4h4z" fill="#fff"/></svg>
+                    <span class="visually-hidden">Инстаграм</span></a></li>
                 </ul>
+              <div class="footer-social-tagline">
+                <b class="footer-tagline">Давайте дружить, это выгодно!</b>
+                <p class="footer-paragraph">Скидка 10% для друзей из социальных сетей</p>
+              </div>
           </div>
-          <b class="footer-tagline">Давайте дружить, это выгодно!</b>
-          <p class="footer-paragraph">Скидка 10% для друзей из социальных сетей</p>
+        </div>
       </footer>
   </body>
 </html>
