--- a/index.html
+++ b/index.html
@@ -23,44 +23,44 @@
                   </ul>
              </nav>
           </div>
-          <!-- <b class="tagline">Долго,дорого,скрупулезно.</b>
-          <p>математически выверенный дизайн  для вашего сайта или приложения</p> -->
       </header>
       <main class="main-container">
         <div class="main-slider">
             <div class="container">
               <div class="main-slider-item main-slider-item-slide-1 active">
                   <div class="main-slider-content">
-                    <b class="main-slider-title">Долго,дорого,<br>скрупулезно.</b>
-                    <p class="main-slider-description">Математически выверенный дизайн
+                    <b class="main-slider-title">Долго, дорого,<br>скрупулезно.</b>
+                    <p class="main-slider-description">Математически выверенный дизайн<br>
                         для вашего сайта или мобильного приложения.</p>
                     <a href="" class="main-slider-button">Узнать больше</a>
                   </div>
               </div>
               <div class="main-slider-item main-slider-item-slide-2">
                   <div class="main-slider-content">
-                    <h3 class="main-slider-title">Бла бла</h3>
-                    <p class="main-slider-description">Bla bla bla</p>
+                    <b class="main-slider-title">Любим математику<br> как никто другой.</b>
+                    <p class="main-slider-description">Никакого креатива,только математические формулы
+                       для расчета идеальных пропорций</p>
                     <a href="" class="main-slider-button">Узнать больше</a>
                   </div>
               </div>
               <div class="main-slider-item main-slider-item-slide-3">
                   <div class="main-slider-content">
-                    <h3 class="main-slider-title">Бла бла</h3>
-                    <p class="main-slider-description">Bla bla bla</p>
+                    <b class="main-slider-title">Только ночь,<br> только хардкор</b>
+                    <p class="main-slider-description">Работать днем как все? Мы против этого.
+                    Ближе к полуночи работа только начинается. </p>
                     <a href="" class="main-slider-button">Узнать больше</a>
                   </div>
               </div>
             </div>
             <div class="main-slider-dots">
-              <button class="main-slider-dot" id="slider-1"></button>
-              <button class="main-slider-dot" id="slider-2"></button>
-              <button class="main-slider-dot" id="slider-3"></button>
+              <button class="main-slider-dot active-dot" ></button>
+              <button class="main-slider-dot" ></button>
+              <button class="main-slider-dot" ></button>
             </div>
           </div>
           <h2 class="visually-hidden">Услуги</h2>
           <section class="products">
-            <div class="products-container">
+            <div class="container">
               <ul class="products-list">
                   <li class="web-sites">
                       <img src="img/illustration-1.png" alt="Веб-сайты">
@@ -71,7 +71,7 @@
                   <li class="apps">
                       <img src="img/illustration-2.png" alt="Приложения">
                       <h3>ПРИЛОЖЕНИЯ</h3>
-                      <p>Покорите топ-10 приложений в App Store и Google play</p>
+                      <p>Покорите топ-10 приложений в AppStore и Google Play</p>
                       <a class="product-order green-link" href="catalog.html">Заказать</a>
                   </li>
                   <li class="presentations">
@@ -86,11 +86,11 @@
            <div class="container">
              <div class="row">
                <section class="about-us">
-                 <b class="about-us-studio">Мы-маленькая,но гордая дизайн-студия из Краснодара</b>
-                 <p>
+                 <b class="about-us-studio">Мы &mdash; маленькая, но гордая дизайн-студия из Краснодара.</b>
+                 <p class="about-us-tagline">
                    Исповедуем принципы минимализма и чистоты.
                    Ставим математический расчет превыше креатива.
-                   Работаем не покладая рук как роботы.
+                   Работаем не покладая рук, как роботы.
                  </p>
                  <p class="orders">Выполняем заказы на разработку:</p>
                  <ul class="about-us-orders">
@@ -100,13 +100,15 @@
                   </ul>
                </section>
                <section class="statistics">
-                 <img src="img/nerds-illustration.png" alt="Логотип">
-                 <p>С 2004 года любим точность во всем:</p>
-                 <table>
+                 <div class="statistics-logo">
+                   <img src="img/nerds-illustration.png" alt="Логотип">
+                 </div>
+                 <p staisics-paragraph> С 2004 года любим точность во всем:</p>
+                 <table class="statistics-table">
                     <tr class="statistics-percents">
-                        <td>146%</td>
-                        <td>100%</td>
-                       <td>50%</td>
+                        <td>146<sup><span class="statistics-persent" >%</span></sup></td>
+                        <td>100<sup><span class="statistics-persent">%</span></sup></td>
+                        <td>50<sup><span class="statistics-persent">%<span></sup></td>
                      </tr>
                      <tr class="statistics-advantages">
                        <td>Уровень самоотдачи</td>
@@ -120,10 +122,10 @@
           <div class=container>
             <section class="projects">
                 <ul class="projects-list">
-                    <li><a href=""><img src="img/logo-1.png" alt="HTML Академия"></a></li>
-                    <li><a href=""><img src="img/logo-2.png" alt="Барбершоп Бородинский"></a></li>
-                    <li><a href=""><img src="img/logo-3.png" alt="Пинк"></a></li>
-                    <li><a href=""><img src="img/logo-4.png" alt="Мишка"></a></li>
+                    <li><a href="" ><img src="img/logo-1.png" alt="HTML Академия"></a></li>
+                    <li><a href="" ><img src="img/logo-2.png" alt="Барбершоп Бородинский"></a></li>
+                    <li><a href="" ><img src="img/logo-3.png" alt="Пинк"></a></li>
+                    <li><a href="" ><img src="img/logo-4.png" alt="Мишка"></a></li>
                 </ul>
             </section>
           </div>
@@ -182,5 +184,6 @@
           </div>
         </div>
       </footer>
+      <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
