--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <div class="main-slider-item main-slider-item-slide-3">
                   <div class="main-slider-content">
                     <b class="main-slider-title">Только ночь,<br> только хардкор</b>
-                    <p class="main-slider-description">Работать днем как все? Мы против этого.
+                    <p class="main-slider-description">Работать днем как все? Мы против этого.<br>
                     Ближе к полуночи работа только начинается. </p>
                     <a href="" class="main-slider-button">Узнать больше</a>
                   </div>
@@ -145,12 +145,15 @@
           <button class="" type="button" name="closebutton">Закрыть</button>
        </form>
           <section class="map">
+            <div class="map-image">
+              <img src="img/map.png" alt="Карта">
               <div class="feedback-write-us">
                 <h3>NЁRDS DESIGN STUDIO</h3>
                 <span class="feedback-address">191186, Санкт-Петербург, ул. Б.Конюшенная, д.19/8</span>
                 <span class="feedback-telephone">тел. +7(812)275-75-75</span>
                 <button type="button" name="write-us-button">Напишите нам</button>
               </div>
+            </div>
           </section>
       <footer class="main-footer">
         <div class="container">
