--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <h1 class="visually-hidden">Студия Нердс</h1>
             <nav class="main-navigation">
-                <a class="nerds-logo" href=""><img src="img/nerds-logo.png" alt="Наш логотип"></a>
+                <div class="nerds-logo"><img src="img/nerds-logo.png" alt="Наш логотип"></div>
                 <ul class="site-navigation">
                     <li><a href="">Студия</a></li>
                     <li><a href="">Клиенты</a></li>
@@ -108,7 +108,7 @@
                     <tr class="statistics-percents">
                         <td>146<sup><span class="statistics-persent" >%</span></sup></td>
                         <td>100<sup><span class="statistics-persent">%</span></sup></td>
-                        <td>50<sup><span class="statistics-persent">%<span></sup></td>
+                        <td>50<sup><span class="statistics-persent">%</span></sup></td>
                      </tr>
                      <tr class="statistics-advantages">
                        <td>Уровень самоотдачи</td>
@@ -122,7 +122,7 @@
           <div class=container>
             <section class="projects">
                 <ul class="projects-list">
-                    <li><a href="" ><img src="img/logo-1.png" alt="HTML Академия"></a></li>
+                    <li><a href="https://htmlacademy.ru/intensive/htmlcss" ><img src="img/logo-1.png" alt="HTML Академия"></a></li>
                     <li><a href="" ><img src="img/logo-2.png" alt="Барбершоп Бородинский"></a></li>
                     <li><a href="" ><img src="img/logo-3.png" alt="Пинк"></a></li>
                     <li><a href="" ><img src="img/logo-4.png" alt="Мишка"></a></li>
@@ -146,12 +146,12 @@
        </form>
           <section class="map">
             <div class="map-image">
-              <img src="img/map.png" alt="Карта">
+              <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A5a721fe130df8b4a33efbc38c09dff4abed4be637de0900b5c49e1a316053371&amp;source=constructor" width="100%" height="416" frameborder="0"></iframe>
               <div class="feedback-write-us">
                 <h3>NЁRDS DESIGN STUDIO</h3>
-                <span class="feedback-address">191186, Санкт-Петербург, ул. Б.Конюшенная, д.19/8</span>
-                <span class="feedback-telephone">тел. +7(812)275-75-75</span>
-                <button type="button" name="write-us-button">Напишите нам</button>
+                <div class="feedback-address">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</div>
+                <div class="feedback-telephone">тел. +7 (812) 275-75-75</div>
+                <button type="button" class="write-us-button">Напишите нам</button>
               </div>
             </div>
           </section>
