--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
       <header class="main-header">
          <div class="container">
             <nav class="main-navigation">
-               <a class="nerds-logo-link" href="index.html"><img src="img/nerds-logo.png" alt="Наш логотип"></a>
+               <a class="nerds-logo-link" href="index.html"><img src="img/nerds-logo.png" alt="Наш логотип" width="160" height="65"></a>
                <ul class="site-navigation">
                   <li><a href="">Студия</a></li>
                   <li><a href="">Клиенты</a></li>
@@ -62,7 +62,7 @@
                            <label for="fixed-greed">Фиксированная</label>
                         </li>
                         <li class="greed-option">
-                           <input class="visually-hidden" type="radio" name="greed-group" id="resin-greed" value="resin">
+                           <input class="visually-hidden" type="radio" name="greed-group" id="resin-greed" value="resin" disabled>
                            <label for="resin-greed">Резиновая</label>
                         </li>
                      </ul>
@@ -83,7 +83,7 @@
                            <label for="news">Новости</label>
                         </li>
                         <li class="features-item">
-                           <input class="visually-hidden" type="checkbox" name="galery-feature" value="galery-item" id="galery">
+                           <input class="visually-hidden" type="checkbox" name="galery-feature" value="galery-item" id="galery" disabled>
                            <label for="galery">Галерея</label>
                         </li>
                         <li class="features-item">
@@ -112,7 +112,7 @@
                   <div class="catalog-item">
                      <div class="catalog-item-decorate"></div>
                      <div class="catalog-item-image">
-                        <img src="img/img-sedona.jpg" alt="Седона">
+                        <img src="img/img-sedona.jpg" alt="Седона" width="360" height="576">
                      </div>
                      <div class="catalog-item-description">
                         <a href="#" class="catalog-item-link">
@@ -127,7 +127,7 @@
                   <div class="catalog-item">
                      <div class="catalog-item-decorate"></div>
                      <div class="catalog-item-image">
-                        <img src="img/img-pink.jpg" alt="Пинк">
+                        <img src="img/img-pink.jpg" alt="Пинк" width="360" height="576">
                      </div>
                      <div class="catalog-item-description">
                         <a href="#" class="catalog-item-link">
@@ -142,7 +142,7 @@
                   <div class="catalog-item">
                      <div class="catalog-item-decorate"></div>
                      <div class="catalog-item-image">
-                        <img src="img/img-barbershop.jpg" alt="Барбершоп">
+                        <img src="img/img-barbershop.jpg" alt="Барбершоп" width="360" height="576">
                      </div>
                      <div class="catalog-item-description">
                         <a href="#" class="catalog-item-link">
@@ -157,7 +157,7 @@
                   <div class="catalog-item">
                      <div class="catalog-item-decorate"></div>
                      <div class="catalog-item-image">
-                        <img src="img/img-mishka.jpg" alt="Мишка">
+                        <img src="img/img-mishka.jpg" alt="Мишка" width="360" height="576">
                      </div>
                      <div class="catalog-item-description">
                         <a href="#" class="catalog-item-link">
@@ -172,7 +172,7 @@
                   <div class="catalog-item">
                      <div class="catalog-item-decorate"></div>
                      <div class="catalog-item-image">
-                        <img src="img/img-aplus.jpg" alt="Аплюс">
+                        <img src="img/img-aplus.jpg" alt="Аплюс" width="360" height="576">
                      </div>
                      <div class="catalog-item-description">
                         <a href="#" class="catalog-item-link">
@@ -187,7 +187,7 @@
                   <div class="catalog-item">
                      <div class="catalog-item-decorate"></div>
                      <div class="catalog-item-image">
-                        <img src="img/img-kvast.jpg" alt="Кваст">
+                        <img src="img/img-kvast.jpg" alt="Кваст" width="360" height="576">
                      </div>
                      <div class="catalog-item-description">
                         <a href="#" class="catalog-item-link">
@@ -289,5 +289,6 @@
             </div>
          </div>
       </footer>
+      <script src="js/script.js"></script>
    </body>
 </html>
