--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <head>
       <meta charset="utf-8">
       <title>Нёрдс</title>
+      <link rel="stylesheet" href="css/normalize.css">
       <link rel="stylesheet" href="css/style.css">
       <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
    </head>
@@ -11,7 +12,7 @@
          <div class="container">
             <h1 class="visually-hidden">Студия Нердс</h1>
             <nav class="main-navigation">
-               <div class="nerds-logo"><img src="img/nerds-logo.png" alt="Наш логотип"></div>
+               <div class="nerds-logo"><img src="img/nerds-logo.png" alt="Наш логотип" width="160" height="65"></div>
                <ul class="site-navigation">
                   <li><a href="">Студия</a></li>
                   <li><a href="">Клиенты</a></li>
@@ -66,19 +67,19 @@
             <div class="container">
                <ul class="products-list">
                   <li class="web-sites">
-                     <img src="img/illustration-1.png" alt="Веб-сайты">
+                     <img src="img/illustration-1.png" alt="Веб-сайты" width="300" height="146">
                      <h3>ВЕБ-САЙТЫ</h3>
                      <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
                      <a class="product-order red-link" href="catalog.html">Заказать</a>
                   </li>
                   <li class="apps">
-                     <img src="img/illustration-2.png" alt="Приложения">
+                     <img src="img/illustration-2.png" alt="Приложения" width="300" height="146">
                      <h3>ПРИЛОЖЕНИЯ</h3>
                      <p>Покорите топ-10 приложений в AppStore и Google Play</p>
                      <a class="product-order green-link" href="catalog.html">Заказать</a>
                   </li>
                   <li class="presentations">
-                     <img src="img/illustration-3.png" alt="Презентации">
+                     <img src="img/illustration-3.png" alt="Презентации" width="300" height="146">
                      <h3>ПРЕЗЕНТАЦИИ</h3>
                      <p>Вы даже не подозреваете насколько вы изумительны!</p>
                      <a class="product-order yellow-link" href="catalog.html">Заказать</a>
@@ -90,7 +91,7 @@
             <div class="row">
                <section class="about-us">
                   <h2 class="visually-hidden">О нас</h2>
-                  <b class="about-us-studio">Мы &mdash;маленькая, но гордая дизайн-студия из Краснодара.</b>
+                  <b class="about-us-studio">Мы &mdash; маленькая, но гордая дизайн-студия из Краснодара.</b>
                   <p class="about-us-tagline">
                      Исповедуем принципы минимализма и чистоты.
                      Ставим математический расчет превыше креатива.
@@ -106,7 +107,7 @@
                <section class="statistics">
                   <h2 class="visually-hidden">Статистика</h2>
                   <div class="statistics-logo">
-                     <img src="img/nerds-illustration.png" alt="Логотип">
+                     <img src="img/nerds-illustration.png" alt="Логотип" width="360" height="208">
                   </div>
                   <p> С 2004 года любим точность во всем:</p>
                   <table class="statistics-table">
@@ -128,10 +129,10 @@
             <section class="projects">
                <h2 class="visually-hidden">Проекты</h2>
                <ul class="projects-list">
-                  <li><a href="https://htmlacademy.ru/intensive/htmlcss" ><img src="img/logo-1.png" alt="HTML Академия"></a></li>
-                  <li><a href="" ><img src="img/logo-2.png" alt="Барбершоп Бородинский"></a></li>
-                  <li><a href="" ><img src="img/logo-3.png" alt="Пинк"></a></li>
-                  <li><a href="" ><img src="img/logo-4.png" alt="Мишка"></a></li>
+                  <li><a href="https://htmlacademy.ru/intensive/htmlcss" ><img src="img/logo-1.png" alt="HTML Академия" width="260" height="180"></a></li>
+                  <li><a href="" ><img src="img/logo-2.png" alt="Барбершоп Бородинский" width="260" height="180"></a></li>
+                  <li><a href="" ><img src="img/logo-3.png" alt="Пинк" width="260" height="180"></a></li>
+                  <li><a href="" ><img src="img/logo-4.png" alt="Мишка" width="260" height="180"></a></li>
                </ul>
             </section>
          </div>
