--- a/catalog.html
+++ b/catalog.html
@@ -238,7 +238,7 @@
                <h3>NЁRDS DESIGN STUDIO</h3>
                <div class="feedback-address">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</div>
                <div class="feedback-telephone">тел. +7 (812) 275-75-75</div>
-               <button type="button" class="write-us-button" name="write-button" >Напишите нам</button>
+               <a  href="#" class="write-us-button">Напишите нам</a>
             </div>
          </div>
       </section>
@@ -289,6 +289,6 @@
             </div>
          </div>
       </footer>
-      <script src="js/script.js"></script>
+      <script src="js/minscript.js"></script>
    </body>
 </html>
