--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <title>Нёрдс</title>
       <link rel="stylesheet" href="css/normalize.css">
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="css/minstyle.css">
       <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
    </head>
    <body>
@@ -68,19 +68,19 @@
                <ul class="products-list">
                   <li class="web-sites">
                      <img src="img/illustration-1.png" alt="Веб-сайты" width="300" height="146">
-                     <h3>ВЕБ-САЙТЫ</h3>
+                     <h3>Веб-сайты</h3>
                      <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
                      <a class="product-order red-link" href="catalog.html">Заказать</a>
                   </li>
                   <li class="apps">
                      <img src="img/illustration-2.png" alt="Приложения" width="300" height="146">
-                     <h3>ПРИЛОЖЕНИЯ</h3>
+                     <h3>Приложения</h3>
                      <p>Покорите топ-10 приложений в AppStore и Google Play</p>
                      <a class="product-order green-link" href="catalog.html">Заказать</a>
                   </li>
                   <li class="presentations">
                      <img src="img/illustration-3.png" alt="Презентации" width="300" height="146">
-                     <h3>ПРЕЗЕНТАЦИИ</h3>
+                     <h3>Презентации</h3>
                      <p>Вы даже не подозреваете насколько вы изумительны!</p>
                      <a class="product-order yellow-link" href="catalog.html">Заказать</a>
                   </li>
@@ -166,7 +166,7 @@
                <h3>NЁRDS DESIGN STUDIO</h3>
                <div class="feedback-address">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</div>
                <div class="feedback-telephone">тел. +7 (812) 275-75-75</div>
-               <button type="button" class="write-us-button" name="write-button">Напишите нам</button>
+               <a href="#" class="write-us-button">Напишите нам</a>
             </div>
          </div>
       </section>
@@ -217,6 +217,6 @@
             </div>
          </div>
       </footer>
-      <script src="js/script.js"></script>
+      <script src="js/minscript.js"></script>
    </body>
 </html>
