--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <title>Каталог услуг студии Нердс</title>
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="css/minstyle.css">
       <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
    </head>
    <body>
